[package]
name = "kvvliveapi"
version = "0.1.0"
authors = ["Clemens Wallrath <dev@nervengiftlabs.de>"]
description = "Rust bindings for the Karlsruher Verkehrsverbund live data API"
repository = "https://github.com/nervengift/kvvliveapi-rs"
license = "WTFPL"
edition = "2021"

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = { version = "0.8", features = ["serde"] }
regex = { version = "1.10", default-features = false, features = ["std"] }
url = "2.4"
reqwest = { version = "0.11", features = ["json"] }
